# ia-labtracker-exam-agent

./: .env.example  .gitignore  Dockerfile  Manchesters.xlsx  README.md  docker-compose.yml  pyproject.toml  ranking_output_20260304_003457.xlsx  ranking_output_20260304_004024.xlsx  ranking_output_20260307_133124.xlsx  ranking_output_20260307_140833.xlsx  ranking_output_20260307_163100.xlsx  requirements.txt
.claude/: settings.local.json
sql/: 000_init_tables.sql  001_hybrid_search_function.sql  002_theme_stats.sql  002_theme_stats_table.sql  003_seed_famerp.sql  003_theme_stats_schema.sql  004_theme_stats_embedding.sql  005_restore_cor_hex.sql  006_theme_stats_all_view.sql  theme_stats_all_rows.sql
src/: cli.py  config.py  main.py
tables/: ranking_output_20260308_102740.xlsx  ranking_output_20260308_193209.xlsx  ranking_output_20260308_224229.xlsx  ranking_output_20260308_230521.xlsx  ranking_output_20260308_233406.xlsx  ranking_output_20260309_000313.xlsx  ranking_output_20260309_003606.xlsx  ranking_output_20260309_005942.xlsx  ranking_output_20260309_012342.xlsx  ranking_output_20260309_102341.xlsx  ranking_output_20260309_121729.xlsx  ranking_output_20260309_122617.xlsx  ranking_output_20260309_131933.xlsx  ranking_output_20260309_191343.xlsx  ranking_output_20260309_191417.xlsx  ranking_output_20260309_191500.xlsx  ranking_output_20260309_192130.xlsx  ranking_output_20260309_192340.xlsx  ranking_output_20260309_201543.xlsx  ranking_output_20260309_223109.xlsx  ranking_output_20260309_223130.xlsx  ranking_output_20260309_223333.xlsx  (+2 more)
tests/: test_aggregator.py  (+3 more)
(+16 files in other folders)
